documentation updated for v1.2

--- a/source/Muki/resources/templates/template_objc_JsonDeserializer.h.vm
+++ b/source/Muki/resources/templates/template_objc_JsonDeserializer.h.vm
@@ -8,9 +8,7 @@
 #import "SBJson.h"
 $helper.getJsonDeserializerImportDeclarations( $definitions )
 
-@interface JsonDeserializer : NSObject {
-    
-}
+@interface JsonDeserializer : NSObject
 
 - (id)init;
 #foreach( $type in $definitions.model )
