--- a/source/Muki/resources/templates/template_objc_XmlAttribute.h.vm
+++ b/source/Muki/resources/templates/template_objc_XmlAttribute.h.vm
@@ -6,12 +6,7 @@
  */
 #import <Foundation/Foundation.h>
 
-@interface XmlAttribute : NSObject {
-
-	NSString *name;
-    NSString *value;
-    NSInteger typeId;
-}
+@interface XmlAttribute : NSObject
 
 @property (nonatomic, strong) NSString *name;
 @property (nonatomic, strong) NSString *value;
