--- a/source/Muki/resources/templates/template_objc_XmlSerializer.h.vm
+++ b/source/Muki/resources/templates/template_objc_XmlSerializer.h.vm
@@ -7,11 +7,7 @@
 #import <Foundation/Foundation.h>
 $helper.getXmlSerializerInterfaceImportDeclarations( $definitions )
 
-@interface XmlSerializer : NSObject {
-	
-	 NSMutableString *xmlOutput;
-
-}
+@interface XmlSerializer : NSObject
 
 @property (nonatomic, strong) NSMutableString *xmlOutput;
 
