--- a/source/Muki/resources/templates/template_objc_type.h.vm
+++ b/source/Muki/resources/templates/template_objc_type.h.vm
@@ -7,15 +7,7 @@
 #import <Foundation/Foundation.h>
 $helper.getTypeInterfaceImportDeclarations( $type )
 
-@interface $type.name : NSObject {
-
-#foreach( $attribute in $type.simpleAttr )
-    $helper.getAttributeDeclaration( $attribute );
-#end
-#foreach( $attribute in $type.listAttr )
-    $helper.getAttributeDeclaration( $attribute );
-#end
-}
+@interface $type.name : NSObject
 
 #foreach( $attribute in $type.simpleAttr )
 $helper.getPropertyDeclaration( $attribute );
